# ai-agent-platform-mvp

./: .dockerignore  .env.example  .gitignore  IMPLEMENTATION_PLAN.md  README.md  SPECIFY_GUIDE.md  ask.md  demo.sh  docker-compose.yml  main.py  pyproject.toml  run_demo.py
.github/: copilot-instructions.md
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
config/: account_mapping.json  fx_rates.json  reconciliation-agent.yaml
data/: generate_mock_data.py  validate_model_latency.py
docker/: Dockerfile  init.sql
docker/mcp_stub/: failure_ticket.json  success_ticket.json
docker/mock_exchange_api/: Dockerfile  app.py
docs/: architecture_demo_pitch.md  demo_runbook.md  prd.md
specs/: approval_api_spec.py  audit_logger_spec.py  inmemory_connector_spec.py  logs_connector_spec.py  mcp_connector_spec.py  model_router_spec.py  postgres_connector_spec.py  reconciliation_tooling_spec.py  reconciliation_workflow_spec.py  rest_connector_spec.py  router_spec.py  session_api_spec.py  session_manager_spec.py  ticket_creation_flow_spec.py
specs/001-settlement-reconciliation-mvp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: __init__.py
src/api/: main.py  trace_view.py
src/audit/: __init__.py  audit_logger.py
src/config/: __init__.py  agent_config.py
src/connectors/: __init__.py  base.py  inmemory_connector.py  logs_connector.py  mcp_connector.py  postgres_connector.py  rest_connector.py  sandbox_connector.py
(+13 files in other folders)
